--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 pandas = "^2.2.1"
 openpyxl = "^3.1.2"
+google-cloud-storage = "^2.16.0"
 
 
 [tool.poetry.group.dev.dependencies]
