--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 pandas = "^2.2.1"
 openpyxl = "^3.1.2"
 google-cloud-storage = "^2.16.0"
+pyspark = "^3.5.1"
 
 
 [tool.poetry.group.dev.dependencies]
