--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^2.2.1"
 openpyxl = "^3.1.2"
 google-cloud-storage = "^2.16.0"
 pyspark = "^3.5.1"
+google-cloud-bigquery = "^3.20.1"
 
 
 [tool.poetry.group.dev.dependencies]
