--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ openpyxl = "^3.1.2"
 google-cloud-storage = "^2.16.0"
 pyspark = "^3.5.1"
 google-cloud-bigquery = "^3.20.1"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
