--- a/sample.env
+++ b/sample.env
@@ -3,16 +3,17 @@
 #  2. Fill in env variables
 #  3. source the file
 
-# TF_VAR_ prefix to be read by terraform
-export TF_VAR_GCP_REGION=
-export TF_VAR_GCP_BUCKET=
-export TF_VAR_GCP_BUCKET_LOCATION=
-export TF_VAR_GCP_PROJECT=
-export TF_VAR_GCP_BQ_DATASET=
-
-
 export GCS_BUCKET_ROOT="raw_data"  # base key to each file in GCS Bucket
 export SOURCE_WEB_FILES="data"  # fodler with source.json
 export GCP_EXTERNAL_TABLE="external_street_events"  # external table to be created from .csv files
 
 export GOOGLE_APPLICATION_CREDENTIALS=  # path to google credentials json file
+
+
+# TF_VAR_ prefix to be read by terraform
+# Below values can be changed according to GCP preferences
+export TF_VAR_GCP_REGION="us-central1"
+export TF_VAR_GCP_BUCKET="my_street_analytics"
+export TF_VAR_GCP_BUCKET_LOCATION="US"
+export TF_VAR_GCP_PROJECT=
+export TF_VAR_GCP_BQ_DATASET="my_street_analytics"
